# ChangeLog for app-arch/libarchive
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/libarchive/ChangeLog,v 1.156 2013/06/16 09:42:44 pacho Exp $

  16 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #122207

  07 May 2013; Samuli Suominen <ssuominen@gentoo.org>
  -libarchive-3.0.4-r1.ebuild,
  -files/libarchive-3.0.4-handle-unsupported-acl-types.patch:
  old

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for ppc64, wrt bug #463632

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for ppc, wrt bug #463632

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for s390, wrt bug #463632

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for arm, wrt bug #463632

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for sparc, wrt bug #463632

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for sh, wrt bug #463632

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for alpha, wrt bug #463632

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for ia64, wrt bug #463632

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for x86, wrt bug #463632

  31 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for amd64, wrt bug #463632

  30 Mar 2013; Jeroen Roovers <jer@gentoo.org> libarchive-3.1.2-r1.ebuild:
  Stable for HPPA (bug #463632).

  30 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> -libarchive-3.1.1.ebuild,
  -libarchive-3.1.2.ebuild:
  old

*libarchive-3.1.2-r1 (30 Mar 2013)

  30 Mar 2013; Samuli Suominen <ssuominen@gentoo.org>
  +libarchive-3.1.2-r1.ebuild, +files/libarchive-3.1.2-CVE-2013-0211.patch: