@@ -3,13 +3,13 @@ Hash: SHA256
 
 AUX libarchive-3.1.2-CVE-2013-0211.patch 1087 SHA256 6e9940a1b148f3ceb43bb172416b332ba922bb951e7832193ff997c2d9026bb4 SHA512 38ef32b30b3eb5a7c68e31086da64b871bae70002600080541ea6d0ea3680f68f9e65760f803a0e96d233e1a21858a83946c1fd63fd67d5eb030120940896c7a WHIRLPOOL 6c9a8586e011a7f392a925261adb9a5b5f8b5a9725b322bd6f8dd56fb3f2bee15b7651c0e6dd3c0a23ddc76c22b84fb6ab041215116076f015ba68aa12ededbe
 DIST libarchive-3.1.2.tar.gz 4527540 SHA256 eb87eacd8fe49e8d90c8fdc189813023ccc319c5e752b01fb6ad0cc7b2c53d5e SHA512 1f3c2a675031f93c7d42ae2ed06742b0b1e2236ff57d9117791d62fb8ae77d6cafffbcb5d45b5bd98daa908bd18c576cf82e01a9b1eba699705e23eff3688114 WHIRLPOOL b90f336afb5264be91fb17d7dae3d5697e3f84e24d276af1d5ac076fe15ef6f5756488f09506fabe470473becb5449cd1f34865309dcf8a914e6e83506e8695f
-EBUILD libarchive-3.1.2-r1.ebuild 2490 SHA256 828ea4d9cffe52c7fd8e057fc97f41d90b89bd4af8abee0ea5e510dbac9ab1b0 SHA512 3e0faccc83e9c9c53d746df6f91f3f70991fedfa3ea99569e51280f0d672232e1d863e3a636828c5729fd3440dad059b623dc3150d325c502b43e3891ad24c72 WHIRLPOOL 7131d1822886f138c035b62ab1bac40b8c484d90912ee4e635579ba34e63c27bc63cdc98eec59e2466c39be85015b748325696a49d2ddd9502f5fea033a73b83
-MISC ChangeLog 35387 SHA256 8f8bfc6478279f86ede6590692aa6588cbaf7a9197886488f4d3447a61a5ce3f SHA512 8b8dcb2225722a058eaa6239bab837a8e95ed449797da4847ce3191d123950df0083aaccc50cb7498e0eac46c405a895d6c828c0855699c59b3480a8375eb79c WHIRLPOOL 16db05b95d228af9eb1d7aece0430451504538aea2fd942bc3250e7d37875915a8a05c9f30367364ffedb8c909b5c20a8fcdf31f7743ab7e83116053e1f0c3b6
+EBUILD libarchive-3.1.2-r1.ebuild 2598 SHA256 cb9d4881db35dcc628bd36d67707b807ea03a250b019ea4a72e5e83b65dbae10 SHA512 18fcad4f56b96e20ba27b454c8f43b7eadd2f3a742f336ce7175362d8d3eddbfcbcd78e3dd811405a50ce1ea692e840668266b8814383598982a60cb40c41165 WHIRLPOOL 8c0e66deb4e9b88bb18580043e580dcab9767ab973b17cf3f50baa9e71c238c9d36177cb50984bb4cecda3df6d78bdc2f04e2097539942bf0348bbdd0f750255
+MISC ChangeLog 35557 SHA256 768a7e4ed39d3f3a690a943144449c3a2652805c1cf9753ae9443f3f1b6018be SHA512 4e5521d732d2339a8bcfd387c7e3745145bd7cf80cdf04dc00253bea8a6e8cd9852ce29a510dec82cbf2e92d16fb127afd588f25ed03f5817a807ceefa76aacb WHIRLPOOL c079f298bf273ba26a617b058ff5fa291abd6511b78a826e9b68a93cf762769b8006f8a15ce97288e2d4e98474d6064b38579e385cf510f981dc364146876032
 MISC metadata.xml 1301 SHA256 2cc87bc829db8751ccf9b12057c05539fae80578f0325da9e15c7b4fb15797e1 SHA512 19dc1b85046b7f0da92cb3246c0ee7f58092202ff212a4ee64d27c53f718017f982946ee7db3cd67fff4888b5fa3b4cdd5eae10e5d49c832ffe2e331aa173efe WHIRLPOOL e61bc96069cf9fc659cb07506963885532bf0239646463965fb6840063a6a0b4007e4d4f68e7ce8d29b7c70fed168966a04e1e74de893d19bb45ace6f085c741
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (SunOS)
 
-iEYEAREIAAYFAlG9iJUACgkQCaWpQKGI+9R8DACfXfe288qzKV2clA4lQLdYE+D9
-j/EAn0qAhtBYlWI/N+6yO7HBX+KWE1Us
-=nQCt
+iEYEAREIAAYFAlHgYCYACgkQX3X2B8XHTokEyQCgon82MnTYGtakLQdOEacrnHYr
+jqsAoIRrHaDBaxU2JPSobQYbATbz5Iy0
+=qlQ6
 -----END PGP SIGNATURE-----
